<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:background="@drawable/launch2"

    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStart="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/gads_logo" />

                <ImageView
                    android:id="@+id/backarrow"
                    android:onClick="onback"
                    android:layout_width="46dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="16dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView2"
            android:textColor="#FF9800"
            android:textAlignment="center"
            android:textSize="30dp"
            android:lineSpacingExtra="2dp"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Project Submission" />
        <TextView
            android:id="@+id/textVie"
            android:textColor="#FF9800"
            android:layout_marginTop="-20dp"
            android:textAlignment="center"
            android:background="@drawable/projectline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          />


    </com.google.android.material.appbar.AppBarLayout>


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittexts"
        android:hint="@string/email_address"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittexts"
        android:hint="@string/first_name"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toStartOf="@+id/lastname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="175dp"
        android:layout_height="44dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittexts"
        android:hint="@string/last_name"
        android:paddingLeft="10dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/firstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/firstname" />

    <EditText
        android:id="@+id/projectlink"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittexts"
        android:hint="@string/project_link"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/onClickSubmit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/submitbtn"
        android:fontFamily="serif"
        android:onClick="onSubmit"
        android:text="@string/submit_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectlink" />

</androidx.constraintlayout.widget.ConstraintLayout>